fix(ajapaik): video thumb not visible, popover not opened for share link, video still description has no clickable timestamp, missing loading overlay from still generation

--- a/ajapaik/ajapaik/static/css/ajp-style.css
+++ b/ajapaik/ajapaik/static/css/ajp-style.css
@@ -190,7 +190,8 @@ body > nav > div > div.navbar-collapse.navbar-left.collapse.in > ul > li > #ajp-
   border-radius: 0;
 }
 
-.ajp-frontpage-image-container {
+.ajp-frontpage-image-container,
+.ajp-frontpage-video-container {
   display: none;
   opacity: 1 !important;
 }
